fix: displaying imgs that was invisible in products section

--- a/src/assets/sass/pages/Home/_Home-products.scss
+++ b/src/assets/sass/pages/Home/_Home-products.scss
@@ -4,6 +4,7 @@
   background: #1e2040;
   padding-top: 3.125rem;
   position: relative;
+  overflow: hidden;
 
   .header1 {
     text-align: center;
@@ -28,6 +29,7 @@
 
   .cards-row-container {
     z-index: 1;
+    position: relative;
     overflow: hidden;
     margin: 0 auto;
     margin-bottom: 4rem;
@@ -38,7 +40,7 @@
       transition: transform 0.3s;
       .card {
         min-width: 90vw;
-        margin-right: 6.875rem;
+        margin-right: 5.5rem;
       }
     }
   }
@@ -74,6 +76,7 @@
     }
 
     .top-right-points {
+      display: block;
       position: absolute;
       height: 124px;
       width: 371px;
@@ -82,6 +85,7 @@
     }
 
     .top-right-diamond-points {
+      display: block;
       position: absolute;
       height: 194px;
       width: 194px;
@@ -90,6 +94,7 @@
     }
 
     .left-center-points {
+      display: block;
       position: absolute;
       height: 335px;
       width: 390px;
